[package]
name = "oshirase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gidle_future = "0.2"
glib = "0.15"
gtk  = "0.15"
gdk-pixbuf = "0.15"
zbus = "2.1"
async-std = { version = "1.10", features = ["attributes"] }
serde = "1.0"
